<resources>
    <string name="app_name">Smart Baby Monitor</string>
    <string name="smart_baby_monitor">Smart Baby Monitor</string>
    <string name="lets_begin">Let\'s Begin!</string>
    <string name="enter_your_email" translatable="false">Enter your email:</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_account">Create Account</string>
    <string name="baby_camera">BabyCam</string>
    <string name="parents_controller">Parent\'s Controller</string>
    <string name="help">Help</string>
    <string name="temperature">Temperature Baby Room</string>
    <string name="humidity">Humidity Baby Room</string>
    <string name="Temperature">temperature</string>
    <string name="Humidity">humidity</string>
    <string name="voice_record">voice record</string>
    <string name="skip_menu">Skip</string>
    <string name="next_menu"><![CDATA[Next >]]></string>
    <string name="back_menu">Back</string>
    <string name="finish_menu">Done!</string>
    <string name="bold">bold</string>
    <string name="play_button">PLAY</string>
    <string name="play_text">Play</string>
    <string name="pause_text">Pause</string>
    <string name="good_night_song">Goog Night Song</string>
    <string name="twinkle_song">Twinkle Little Star</string>
</resources>
